--- a/yahttp/Makefile
+++ b/yahttp/Makefile
@@ -1,3 +1,14 @@
 
+all: libyahttp.a
+
+
+clean:
+	-rm -f *.o *.a
+
+
+reqresp.o: *.cpp *.hpp
+
+
 libyahttp.a: reqresp.o
+	echo AR $@
 	$(AR) rcs $@ $<
