--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc
 before_script:
  - sudo apt-get update
- - sudo apt-get install libboost-test-dev
+ - sudo apt-get install libboost-test-dev libboost-program-options-dev
 script:
  - make -j 4
  - make -j 4 check
