--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,8 +1,10 @@
 CXX=g++
-.PHONY: all 
+CXXFLAGS=-fpie -fPIC -DPIE -std=c++11
+
+.PHONY: all basic_webserver
 
 all:
 	echo Used per-example
 
 basic_webserver: basic_webserver.cpp ../yahttp/reqresp.cpp
-	$(CXX) -g -Wall -o basic_webserver basic_webserver.cpp ../yahttp/reqresp.cpp
+	$(CXX) $(CXXFLAGS) -g -Wall -o basic_webserver basic_webserver.cpp ../yahttp/reqresp.cpp
