--- a/yahttp/Makefile.am
+++ b/yahttp/Makefile.am
@@ -1,2 +1,3 @@
 lib_LIBRARIES=libyahttp.a
+libyahttp_a_CXXFLAGS=$(RELRO_CFLAGS) $(PIE_CFLAGS)
 libyahttp_a_SOURCES=cookie.hpp exception.hpp reqresp.cpp reqresp.hpp router.cpp router.hpp url.hpp utility.hpp yahttp.hpp
