--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ compiler:
 before_script:
  - sudo apt-get install --no-install-recommends libboost-all-dev
 script:
+ - configure
  - make
  - make check
