--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
 EXTRA_PROGRAMS=basic_webserver
 
 basic_webserver_SOURCES=basic_webserver.cpp
-basic_webserver_LDADD=../yahttp/libyahttp.a
+basic_webserver_LDADD=../yahttp/libyahttp.la
