--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_PROGRAMS=test
 test_CXXFLAGS=$(RELRO_CFLASG) $(PIE_CFLAGS) -I..
-test_LDADD=$(RELRO_LDFLAGS) $(PIE_LDFLAGS) -lboost_unit_test_framework ../yahttp/libyahttp.a
+test_LDADD=$(RELRO_LDFLAGS) $(PIE_LDFLAGS) -lboost_unit_test_framework ../yahttp/libyahttp.la
 test_SOURCES=test-main.cpp test-request-get.cpp test-request-get-arl.cpp test-request-post.cpp test-response-simple.cpp
 
 TESTS=test
