--- a/yahttp/Makefile.am
+++ b/yahttp/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES=libyahttp.la
 include_yahttpdir=$(includedir)/yahttp
 include_yahttp_HEADERS=cookie.hpp exception.hpp reqresp.hpp router.hpp url.hpp utility.hpp yahttp.hpp yahttp-config.h
-libyahttp_la_CXXFLAGS=$(RELRO_CFLAGS) $(PIE_CFLAGS)
+libyahttp_la_CXXFLAGS=$(RELRO_CFLAGS) $(PIE_CFLAGS) -D__STRICT_ANSI__
 libyahttp_la_SOURCES=cookie.hpp exception.hpp reqresp.cpp reqresp.hpp router.cpp router.hpp url.hpp utility.hpp yahttp.hpp
