--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
   - gcc
   - clang
 before_script:
- - sudo apt-get install --no-install-recommends libboost-test-dev doxygen
+ - sudo apt-get install --no-install-recommends libboost-test-dev doxygen graphviz
 script:
  - ./autogen.sh
  - ./configure
