--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ addons:
     notification_email: cmouse@desteem.org
     build_command_prepend: "./autogen.sh && ./configure"
     build_command: make
-    branch_pattern: coverity_master
+    branch_pattern: master
