Support systems with no tm_gmtoff, fixes #5

--- a/configure.ac
+++ b/configure.ac
@@ -22,5 +22,11 @@ LT_INIT
 AC_CC_PIE
 AC_LD_RELRO
 
+AC_CHECK_MEMBER(struct tm.tm_gmtoff,
+  [AC_DEFINE(HAVE_TM_GMTOFF, 1,
+     [Define if struct tm has the tm_gmtoff member.])],
+     ,
+     [#include <time.h>])
+
 AC_CONFIG_FILES([Makefile yahttp/Makefile tests/Makefile examples/Makefile])
 AC_OUTPUT
