Fix boost usage

--- a/configure.ac
+++ b/configure.ac
@@ -12,10 +12,6 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_PROG_CC
 AC_PROG_CXX
 AX_CXX_COMPILE_STDCXX_11([], [optional])
-# test for boost anyways
-AS_IF([test "x$HAVE_CXX11" != x1],[
-  BOOST_REQUIRE([1.36])
-])
 AM_PROG_CC_C_O
 AC_PROG_MAKE_SET
 LT_INIT
@@ -27,6 +23,12 @@ AC_CHECK_MEMBER(struct tm.tm_gmtoff,
      [Define if struct tm has the tm_gmtoff member.])],
      ,
      [#include <time.h>])
+
+# test for boost anyways
+BOOST_REQUIRE([1.36], [boost=no])
+if test "$boost" == ""; then
+  BOOST_TEST
+fi
 
 AC_CONFIG_FILES([Makefile yahttp/Makefile tests/Makefile examples/Makefile])
 AC_OUTPUT
