--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,7 @@
 EXTRA_PROGRAMS=test
-test_CFLAGS=$(RELRO_CFLASG) $(PIE_CFLAGS) -I..
-test_CXXFLAGS=$(RELRO_CFLASG) $(PIE_CFLAGS) -I..
-test_LDADD=$(RELRO_LDFLAGS) $(PIE_LDFLAGS) -lboost_unit_test_framework ../yahttp/libyahttp.la
+test_CFLAGS=$(RELRO_CFLASG) $(PIE_CFLAGS) -I.. $(BOOST_CPPFLAGS)
+test_CXXFLAGS=$(RELRO_CFLASG) $(PIE_CFLAGS) -I.. $(BOOST_CPPFLAGS)
+test_LDADD=$(RELRO_LDFLAGS) $(PIE_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) ../yahttp/libyahttp.la
 test_SOURCES=md5.h md5.c test-main.cpp test-md5.cpp test-utility.cpp test-url.cpp test-cookie.cpp test-request.cpp test-response.cpp test-router.cpp
 
 TESTS=test
