Disable coverity for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ script:
  - ./configure
  - make
  - make check
-addons:
-  coverity_scan:
-    project:
-      name: "cmouse/yahttp"
-      description: "Yet Another HTTP Library"
-    notification_email: cmouse@desteem.org
-    build_command_prepend: "./autogen.sh && ./configure"
-    build_command: make
-    branch_pattern: master
+#addons:
+#  coverity_scan:
+#    project:
+#      name: "cmouse/yahttp"
+#      description: "Yet Another HTTP Library"
+#    notification_email: cmouse@desteem.org
+#    build_command_prepend: "./autogen.sh && ./configure"
+#    build_command: make
+#    branch_pattern: master
