--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@ SUBDIRS = yahttp docs tests
 
 EXTRA_PROGRAMS=test
 
-test_SOURCES=test.cc yahttp/cookie.hpp yahttp/exception.hpp yahttp/legacy.hpp yahttp/reqresp.cpp yahttp/reqresp.hpp yahttp/router.cpp yahttp/router.hpp yahttp/url.hpp yahttp/utility.hpp yahttp/yahttp.hpp
+test_SOURCES=test.cc yahttp/cookie.hpp yahttp/exception.hpp yahttp/reqresp.cpp yahttp/reqresp.hpp yahttp/router.cpp yahttp/router.hpp yahttp/url.hpp yahttp/utility.hpp yahttp/yahttp.hpp
