--- a/yahttp/Makefile.am
+++ b/yahttp/Makefile.am
@@ -1,6 +1,3 @@
-ACLOCAL_AMFLAGS=-I m4
-SUBDIRS = yahttp docs tests
+SUBDIRS = yahttp
 
-EXTRA_PROGRAMS=test
-
-test_SOURCES=test.cc yahttp/cookie.hpp yahttp/exception.hpp yahttp/reqresp.cpp yahttp/reqresp.hpp yahttp/router.cpp yahttp/router.hpp yahttp/url.hpp yahttp/utility.hpp yahttp/yahttp.hpp
+EXTRA_DIST = LICENSE README.md
