More autotools magic
  * install the html/* $prefix/share/metronome
  * dist and install the README
  * dist the LICENSE

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
+metronomehtmldir = @datarootdir@/metronome
 AM_CPPFLAGS = $(EIGEN3_CFLAGS) $(YAHTTP_CFLAGS) $(BOOST_CPPFLAGS) $(SANITIZER_FLAGS) -O3 -Wall -pthread
 
 AM_LDFLAGS = \
@@ -18,7 +19,9 @@ metronome_SOURCES = \
   metronome.cc \
   iputils.cc iputils.hh \
   statstorage.cc statstorage.hh \
-  interpolate.cc interpolate.hh
+  interpolate.cc interpolate.hh \
+  metromisc.hh \
+  dolog.hh
 
 metronome_LDFLAGS = \
 	$(AM_LDFLAGS) \
@@ -30,11 +33,27 @@ metronome_LDADD = \
 
 msubmit_SOURCES = \
   msubmit.cc \
-  iputils.cc iputils.hh
+  iputils.cc iputils.hh \
+  metromisc.hh \
+  dolog.hh
 
 mmanage_SOURCES= \
   mmanage.cc \
-  statstorage.cc statstorage.hh
+  statstorage.cc statstorage.hh \
+  metromisc.hh \
+  dolog.hh
+
+nobase_dist_metronomehtml_DATA = \
+  html/*.* \
+  html/js/*
+
+dist_doc_DATA = \
+  README.md
+
+EXTRA_DIST = \
+  LICENSE \
+  build-aux/gen-version \
+  .version
 
 #if DOXYGEN
 #codedocs: codedocs/html/index.html
