--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_script:
 script:
  - ./bootstrap
  - ./configure
+ - make dist
+ - tar xf metronome-*.tar.bz2 -C /tmp
+ - cd /tmp/metronome-*
+ - ./configure
  - make -j 4
  - make -j 4 check
 notifications:
