--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Standards-Version: 3.9.6
 Maintainer: PowerDNS Autobuilder <powerdns.support@powerdns.com>
 Origin: PowerDNS
-Build-Depends: debhelper (>= 9~), dh-autoreconf, dh-systemd, libtool, dpkg-dev (>= 1.17.0~), libboost-dev, libboost-program-options-dev, autotools-dev, automake, autoconf, pkg-config, libeigen3-dev
+Build-Depends: debhelper (>= 9~), dh-autoreconf, dh-systemd, libtool, dpkg-dev (>= 1.17.0~), libboost-dev, libboost-program-options-dev, autotools-dev, automake, autoconf, pkg-config, libeigen3-dev, libsystemd-dev
 Homepage: https://www.github.com/ahupowerdns/metronome
 
 Package: metronome
