--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,8 @@ override_dh_auto_configure:
 		--mandir=\$${prefix}/share/man \
 		--infodir=\$${prefix}/share/info \
 		--libdir='$${prefix}/lib/$(DEB_HOST_MULTIARCH)' \
-		--libexecdir='$${prefix}/lib'
+		--libexecdir='$${prefix}/lib' \
+		--enable-systemd --with-systemd=/lib/systemd/system
 
 override_dh_strip:
 	dh_strip --dbg-package=metronome-dbg
