--- a/metronome.service.in
+++ b/metronome.service.in
@@ -1,5 +1,6 @@
 [Unit]
 Description=Metronome
+Documentation=https://github.com/ahupowerdns/metronome/
 After=network-online.target
 
 [Service]
@@ -10,6 +11,11 @@ ExecStart=@bindir@/metronome --daemon 0 \
   --stats-directory /var/lib/metronome
 User=metronome
 Group=metronome
+PrivateTmp=true
+ProtectSystem=full
+NoNewPrivileges=true
+PrivateDevices=true
+CapabilityBoundingSet=CAP_DAC_OVERRIDE CAP_IPC_LOCK CAP_KILL CAP_NET_BIND_SERVICE
 
 [Install]
 WantedBy=multi-user.target
