Fix Upstart script (it was incomplete)

--- a/metronome-upstart.conf
+++ b/metronome-upstart.conf
@@ -11,5 +11,5 @@ script
   METRONOME_STATSDIRECTORY='/var/lib/metronome'
   METRONOME_USER='metronome'
   [ -r /etc/default/metronome ] && . /etc/default/metronome
-  exec su -s /bin/sh -c '/usr/bin/metronome --daemon 0  --carbon-address $METRONOME_CARBONADDRESS --webserver-address $METRONOME_WEBSERVERADDRESS --stats-directory $METRONOME_STATSDIRECTORY >/dev/null 2>&1
+  exec su -s /bin/sh -c "/usr/bin/metronome --daemon 0  --carbon-address $METRONOME_CARBONADDRESS --webserver-address $METRONOME_WEBSERVERADDRESS --stats-directory $METRONOME_STATSDIRECTORY" $METRONOME_USER >/dev/null 2>&1
 end script
